# slm-hosting-playbook

./: .gitignore  LICENSE  README.md  ROADMAP.md
gemma-slm-hosting/: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  ruff.toml
gemma-slm-hosting/.github/workflows/: ci.yml
gemma-slm-hosting/artifacts/poc_run/: README.md  RESULTS.md  base.json  ft.json  perf_ft.json
gemma-slm-hosting/bench/: perf.py
gemma-slm-hosting/compose/: docker-compose.observability.yml  docker-compose.yml
gemma-slm-hosting/configs/experiments/: baseline.yaml
gemma-slm-hosting/data/: perf_prompts.jsonl  prompts.jsonl
gemma-slm-hosting/docker/: Dockerfile  Dockerfile.gateway  Dockerfile.loadtest  README.md  docker-compose.yml
gemma-slm-hosting/eval/: ab_eval.py
gemma-slm-hosting/loadtest/: locustfile.py
gemma-slm-hosting/scripts/: benchmark.py  benchmark.sh  check_gpu.sh  diag_snapshot.sh  env_doctor.sh  final_poc_run.ipynb  healthcheck.sh  lib_env.sh  poc_run.sh  pretty_ab.sh  read_pointer.py  smoke_test.py  smoke_test.sh  smoke_test_with_base_and_FT.ipynb  start_base_vllm.sh  start_ft_vllm.sh  stop_servers.sh
gemma-slm-training/: .env  .env.example  PHASE2_MODEL_POINTER.example.txt  README.md  pyproject.toml
gemma-slm-training/configs/: dataset.yaml
gemma-slm-training/data/: processed_val.jsonl
gemma-slm-training/scripts/: export_artifacts.ipynb  export_artifacts.py  hf_auth.py  prepare_data.py  sanity_check_before_phase2.ipynb  smoke_model_access.ipynb  smoke_model_access.py  train_lora.ipynb  train_lora.py
(+12 files in other folders)
