[project]
name = "gemma-slm-hosting"
version = "0.1.0"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pre-commit>=3.7",
  "pytest>=8.2",
  "ruff>=0.6.4",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
