[project]
name = "gemma-slm-training"
version = "0.1.0"
description = "Phase 1 Gemma SLM training utilities."
requires-python = ">=3.11"
dependencies = [
  "datasets>=2.18.0",
  "transformers>=4.39.0",
  "accelerate>=0.27.0",
  "peft>=0.10.0",
  "trl>=0.8.0",
  "bitsandbytes>=0.43.0",
  "sentencepiece>=0.1.99",
  "huggingface_hub>=0.23.0",
  "wandb>=0.16.0",
  "torch>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gemma_slm_training"]
